CHATS_SIT/force-app/main/default/objects/Ideas__c.object
<CustomObject>
    <fields>
        <fullName>Category__c</fullName>
        <label>Category</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Attendance</fullName>
                </value>
                <value>
                    <fullName>Authorization</fullName>
                </value>
                <value>
                    <fullName>Batch</fullName>
                </value>
                <value>
                    <fullName>Business Rules Engine</fullName>
                </value>
                <value>
                    <fullName>Correspondence</fullName>
                </value>
                <value>
                    <fullName>County Plans</fullName>
                </value>
                <value>
                    <fullName>Data Collection</fullName>
                </value>
                <value>
                    <fullName>Eligibility</fullName>
                </value>
                <value>
                    <fullName>Financial Management</fullName>
                </value>
                <value>
                    <fullName>Navigation </fullName>
                </value>
                <value>
                    <fullName>Provider Management</fullName>
                </value>
                <value>
                    <fullName>Security</fullName>
                </value>
                <value>
                    <fullName>Waitlist </fullName>
                </value>
                <value>
                    <fullName>Web Services</fullName>
                </value>
                <value>
                    <fullName>Workload Management</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <encryptionScheme>ProbabilisticEncryption</encryptionScheme>
        <label>Description</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Idea_Status__c</fullName>
        <label>Idea Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                    <default>true</default>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>NBR_VOTES__c</fullName>
        <label>Number of Votes</label>
        <summaryForeignKey>Ideas_Vote__c.NBR_IDEA__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Summary__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <label>Summary</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>value__c</fullName>
        <encryptionScheme>CaseSensitiveDeterministicEncryption</encryptionScheme>
        <inlineHelpText>Describe the benefits of the proposed change (saves time, reduces effort)</inlineHelpText>
        <label>Describe the benefit</label>
        <required>true</required>
        <type>TextArea</type>
    </fields>
    <label>Ideas</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Summary__c</columns>
        <columns>Category__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Idea Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Ideas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>