CHATS_SIT/force-app/main/default/objects/Ideas__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Summary__c</columns>
    <columns>Category__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>